--- a/Kustomize/Dashboard/base/deployment.yaml
+++ b/Kustomize/Dashboard/base/deployment.yaml
@@ -18,7 +18,7 @@ spec:
       name: dashboard-pod
       labels:
         app: dashboard
-        version: "1.0.0"
+        version: 1.0.0
         containers:
         - name: dashboard
           image: shaikkhajaibrahim/dashboardservice:1.0.0
