--- a/RBAC/secret-reader/secret-reader.yaml
+++ b/RBAC/secret-reader/secret-reader.yaml
@@ -4,7 +4,7 @@ kind: Role
 metadata:
   name: secret-reader
 rules:
-  - apiGroups: ""
+  - apiGroups: [""]
     resources:
       - secrets
     verbs:
