--- a/RBAC/secret-pod-reader/secret-pod-reader.yaml
+++ b/RBAC/secret-pod-reader/secret-pod-reader.yaml
@@ -4,14 +4,14 @@ kind: Role
 metadata:
   name: secret-pod-reader
 rules:
-  - apiGroups: ""
+  - apiGroups: [""]
     resources:
       - secrets
     verbs:
       - get
       - watch
       - list
-  - apiGroups: ""
+  - apiGroups: [""]
     resources:
       - pod
     verbs:
